[package]
name = "cw-quadratic-funding"
version = "0.1.0"
authors = ["orkunkl <kulceorkun@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[dependencies]
cosmwasm-std = { version = "1.1.4" }
cosmwasm-storage = { version = "1.1.4" }
cw-storage-plus = { version = "0.15.1" }
cw-utils = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
integer-sqrt = "0.1.5"
cosmwasm-schema = { version = "1.1.4" }
